# stm32_bootloader

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  STM32F401RETx_FLASH.ld  flash_openocd.cfg  st_nucleo_f4.cfg  stm32f401.ld
Drivers/: CMakeLists.txt
Drivers/CMSIS/DSP/Source/MatrixFunctions/: arm_mat_inverse_f32.c  arm_mat_inverse_f64.c
Drivers/CMSIS/DSP/Source/SupportFunctions/: arm_float_to_q15.c  arm_float_to_q31.c  arm_float_to_q7.c  arm_q15_to_float.c  arm_q15_to_q31.c  arm_q15_to_q7.c  arm_q31_to_float.c  arm_q31_to_q15.c  arm_q31_to_q7.c  arm_q7_to_float.c  arm_q7_to_q15.c  arm_q7_to_q31.c
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: system_stm32f4xx.h
Drivers/CMSIS/Include/: core_cm4.h
Drivers/CMSIS/NN/Source/NNSupportFunctions/: arm_q7_to_q15_no_shift.c  arm_q7_to_q15_reordered_no_shift.c
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h  stm32f4xx_hal_cortex.h  stm32f4xx_hal_def.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_dma_ex.h  stm32f4xx_hal_eth.h  stm32f4xx_hal_exti.h  stm32f4xx_hal_flash.h  stm32f4xx_hal_flash_ex.h  stm32f4xx_hal_gpio.h  stm32f4xx_hal_gpio_ex.h  stm32f4xx_hal_pwr.h  stm32f4xx_hal_pwr_ex.h  stm32f4xx_hal_rcc.h  stm32f4xx_hal_rcc_ex.h  stm32f4xx_ll_lptim.h
Drivers/STM32F4xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h  stm32f4xx_hal_eth_legacy.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c  stm32f4xx_hal_cortex.c  stm32f4xx_hal_dma.c  stm32f4xx_hal_dma_ex.c  stm32f4xx_hal_exti.c  stm32f4xx_hal_flash.c  stm32f4xx_hal_flash_ex.c  stm32f4xx_hal_flash_ramfunc.c  stm32f4xx_hal_gpio.c  stm32f4xx_hal_pcd.c  stm32f4xx_hal_pcd_ex.c  stm32f4xx_hal_pwr.c  stm32f4xx_hal_pwr_ex.c  stm32f4xx_hal_rcc.c  stm32f4xx_hal_rcc_ex.c  stm32f4xx_hal_tim.c  stm32f4xx_hal_tim_ex.c  stm32f4xx_hal_uart.c  stm32f4xx_ll_usb.c
Inc/: config.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
app/: CMakeLists.txt  stm32f401.ld  stm32f401_app.ld
app/Src/: main.c  startup_stm32f401xe.s  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  system_stm32f4xx.c
boot_control/: CMakeLists.txt
boot_control/Inc/: boot_config.h
boot_control/Src/: boot_config.c
bootloader/: CMakeLists.txt  stm32f401_bootloader.ld
bootloader/Src/: flash_handler.c  flash_handler.h  main.c  main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  uart_handler.c  uart_handler.h
scripts/: apply_code_style.sh  build_project.sh  flash.sh  flash_app.sh  gdb.sh
serial_flasher/mcu/: CMakeLists.txt
serial_flasher/mcu/Inc/: serial_flasher.h
serial_flasher/mcu/Src/: serial_api.c  serial_api.h  serial_flasher.c  serial_process_frame.c  serial_process_frame.h
serial_flasher/python/: serial_flasher.py  serial_process_frame.py
serial_protocol/mcu/: CMakeLists.txt
serial_protocol/mcu/Inc/: serial_protocol.h
serial_protocol/mcu/Src/: serial_api.c  serial_api.h  serial_process_frame.c  serial_process_frame.h  serial_protocol.c
serial_protocol/python/: serial_process_frame.py  serial_protocol.py
